[metadata]
name = easydmp
version = attr: easydmp.__version__
description = Easy web based Data Management Plan generator
long_description = file: README.rst
license = MIT License
url = https://github.com/hmpf/easydmp
author = Hanne Moa
author_email = hanne.moa@uninett.no
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    = src
setup_requires =
    setuptools>=30.3
    wheel>=0.31
install_requires =
    setuptools>=30.3
    wheel>=0.31

[options.package_data]
* = *.rst

[options.packages.find]
exclude = tests
where = ./src/

[coverage:run]
omit =
    src/flow/*

[flake8]
max-line-length = 88
filename =
    src/*
exclude =
    .tox,
    __pycache__,
    migrations,
    templates,
    src/flow,
    src/easydmp/theme
